<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sebastian.practica_6_sqlite.Entidades.NewUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textColorHint="@color/mediumaquamarine">

            <EditText
                android:id="@+id/eId"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/id_libro"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textColorHint="@color/mediumaquamarine">

            <EditText
                android:id="@+id/eNombre_libro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/nombre_libro"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textColorHint="@color/mediumaquamarine">

            <EditText
                android:id="@+id/eNombre_autor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/nombre_autor"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textColorHint="@color/mediumaquamarine">

            <EditText
                android:id="@+id/eNombre_persona"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/nombre_persona"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textColorHint="@color/mediumaquamarine">

            <EditText
                android:id="@+id/eTelefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:hint="@string/telefono"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bRegistrar"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/registrar_libro"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>


